1.10/opt/loadbalancer-fe-web-1.10.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: web-3
  name: web-3-lb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: web-3
  type: LoadBalancer
status:
  loadBalancer: {}
