1.10/opt/nodeport-fe-web-1.8.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: web-3
  name: web-3-np
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: web-3
  type: NodePort
status:
  loadBalancer: {}
