1.10/opt/ingress-fe-web-1.10.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: jenkins.info
    http:
      paths:
      - path: /
        backend:
          serviceName: web-3-ingress
          servicePort: 32758


###########
# para hacer funcionar el ingress agregue 127.0.0.1       jenkins.info
# en el /etc/hosts
#
############
